--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.min.css">
-    <script type="module" src="js/main.js"></script>
+    <link rel="stylesheet" href="dist/css/main.min.css">
+    <script type="module" src="dist/js/main.js"></script>
 </head>
 <body>
     <main class="fade-in">
